--- a/src/main/javascript/angular-apishore/directives/media/image-upload.html
+++ b/src/main/javascript/angular-apishore/directives/media/image-upload.html
@@ -27,7 +27,7 @@
 	</div>
 	<div flow-init
      flow-file-added="added=true;!!{png:1,jpg:1,jpeg:1}[$file.getExtension()]"
-     flow-files-submitted="$flow.upload()"
+	 flow-files-submitted="fileUploadSubmit($file, $event, $flow)"
      flow-file-success="uploaded($file, $message)">
 		<div class="file-upload-preview">
 			<div class="file-upload-preview-actions">
