--- a/src/main/javascript/angular-apishore/directives/select/as-typeahead.html
+++ b/src/main/javascript/angular-apishore/directives/select/as-typeahead.html
@@ -7,7 +7,7 @@
                 <input type="text"
                        class="as-input-control asa-string-type"
                        autocomplete="off"
-                       name="<?formInputId?>"
+                       name="typeahead"
                        ng-change="asChange()"
                        ng-focus="asFocus()"
                        ng-click="openPopupByClick()"
