typeahead: hide create button in case of empty input

--- a/src/main/javascript/angular-apishore/directives/select/as-typeahead.html
+++ b/src/main/javascript/angular-apishore/directives/select/as-typeahead.html
@@ -29,7 +29,7 @@
                 <div class="as-dropdown-select-popup-content-items">
                     <div class="as-hbox">
                         <div class="as-cell-wide">
-                        	<a class="as-button asa-flat asa-primary" ng-click="create($event)" ng-if="asInplaceCreate && filteredItems.length == 0">
+                        	<a class="as-button asa-flat asa-primary" ng-click="create($event)" ng-if="asInplaceCreate && filteredItems.length == 0 && label">
                         		<span class="as-button-text">Create</span>
                         	</a>
                             <div class="as-dropdown-select-popup-item" ng-if="undefinedMenuLabel"
