--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 window.apishoreConfig = {
 		clientId : 'null',
 		localUrl : '',
-		appName : 'docs',
+		appName : '',
 		webappRoot : '',
 		appPath : ''
 	};
