--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<base href="apishore-foundation-browser">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -160,7 +161,7 @@ window.apishoreConfig = {
 		localUrl : '',
 		appName : '',
 		webappRoot : '',
-		appPath : ''
+		appPath : '/apishore-foundation-browser'
 	};
 </script>
 <script src="js/script.js"></script>
