--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@ window.apishoreConfig = {
 		clientId : 'null',
 		localUrl : '',
 		appName : '',
-		webappRoot : '',
-		appPath : '/apishore-foundation-browser'
+		webappRoot : '/apishore-foundation-browser',
+		appPath : ''
 	};
 </script>
 <script src="js/script.js"></script>
