--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<base href="apishore-foundation-browser">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -154,12 +153,12 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/5.11.0/mode/css/css.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/5.11.0/mode/htmlmixed/htmlmixed.min.js"></script>
 <script src="js/vendor/ui-codemirror.min.js"></script>
- 
+
 <script>
 window.apishoreConfig = {
 		clientId : 'null',
-		localUrl : '',
-		appName : '',
+		localUrl : '/apishore-foundation-browser',
+		appName : 'docs',
 		webappRoot : '/apishore-foundation-browser',
 		appPath : ''
 	};
