--- a/root.html
+++ b/root.html
@@ -26,6 +26,37 @@
                         <a ui-sref="root.core.palette">
                             <span class="as-sidebar-menu-item-title">Palettes</span> 
                         </a> 
+                    </li>
+                    <li class="as-sidebar-menu-group-title">modules</li>
+                    <li class="as-sidebar-menu-item"> 
+                        <a ui-sref="root.modules.box">
+                            <span class="as-sidebar-menu-item-title">Box</span> 
+                        </a> 
+                    </li> 
+                    <li class="as-sidebar-menu-item">
+                        <a ui-sref="root.modules.floating">
+                            <span class="as-sidebar-menu-item-title">Floating</span> 
+                        </a> 
+                    </li> 
+                    <li class="as-sidebar-menu-item">
+                        <a ui-sref="root.modules.gridsystem">
+                            <span class="as-sidebar-menu-item-title">Grid System</span> 
+                        </a> 
+                    </li> 
+                    <li class="as-sidebar-menu-item">
+                        <a ui-sref="root.modules.gutter">
+                            <span class="as-sidebar-menu-item-title">Gutters</span> 
+                        </a> 
+                    </li> 
+                    <li class="as-sidebar-menu-item">
+                        <a ui-sref="root.modules.reponsive">
+                            <span class="as-sidebar-menu-item-title">Responsive</span> 
+                        </a> 
+                    </li> 
+                    <li class="as-sidebar-menu-item">
+                        <a ui-sref="root.modules.scrollable">
+                            <span class="as-sidebar-menu-item-title">Scrollable</span> 
+                        </a> 
                     </li> 
                 </ul> 
             </div> 
