--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
 	rel="stylesheet">
 
 <link rel="stylesheet" type="text/css" href="css/style.css">
-<link rel="stylesheet" type="text/css"
-	href="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.11.0/codemirror.min.css">
+<link rel="stylesheet" type="text/css" href="css/codemirror.css">
 
 <!--
 
@@ -164,5 +163,6 @@ window.apishoreConfig = {
 	};
 </script>
 <script src="js/script.js"></script>
+<script src="js/tmp.js"></script>
 <script src="js/livejs.js"></script>
 </html>
