--- a/modules/floating.html
+++ b/modules/floating.html
@@ -1,3 +1,28 @@
 <div class="as-panel as-vscroll"><div class="as-text-panel">
 <h1 class="as-color-primary">Floating module</h1>
+Set of classes used to control floating.
+
+<ul>
+<li>as-float-left</li>
+<li>as-float-right</li>
+</ul>
+
+<p>
+Sample
+</p>
+<div class="as-bgcolor-grey-100" style="height: 200px;">
+  <div class="as-float-right"><div class="as-bgcolor-green-100 as-gutter">Float right</div></div>
+  <div class="as-float-left"><div class="as-bgcolor-green-100 as-gutter">Float left</div></div>
+</div>
+
+<p>
+Source code
+</p>
+<textarea ui-codemirror ui-codemirror-opts="codemirror.html">
+<div class="as-bgcolor-grey-100" style="height: 200px;">
+  <div class="as-float-right"><div class="as-bgcolor-green-100 as-gutter">Float right</div></div>
+  <div class="as-float-left"><div class="as-bgcolor-green-100 as-gutter">Float left</div></div>
+</div>
+</textarea>
+
 </div></div>
