responsive and scrollabel modules

--- a/root.html
+++ b/root.html
@@ -49,7 +49,7 @@
                         </a> 
                     </li> 
                     <li class="as-sidebar-menu-item">
-                        <a ui-sref="root.modules.reponsive">
+                        <a ui-sref="root.modules.responsive">
                             <span class="as-sidebar-menu-item-title">Responsive</span> 
                         </a> 
                     </li> 
