--- a/modules/responsive.html
+++ b/modules/responsive.html
@@ -1,3 +1,18 @@
 <div class="as-panel as-vscroll"><div class="as-text-panel">
-<h1 class="as-color-primary">TODO:</h1>
+<h1 class="as-color-primary">Responsive</h1>
+<p>
+Most of real life use cases of responsive design related to hide or show extra details on specific type of device.
+</p>
+
+<p>Resize browser to see sample in action</p>
+<div class="asd-phone as-bgcolor-grey-100 as-gutter">Visible on phones only</div>
+<div class="asd-tablet as-bgcolor-grey-100 as-gutter">Visible on tablets only</div>
+<div class="asd-desktop as-bgcolor-grey-100 as-gutter">Visible on desktop only</div>
+
+<p>Source</p>
+<textarea ui-codemirror ui-codemirror-opts="codemirror.html">
+<div class="asd-phone">Visible on phones only</div>
+<div class="asd-tablet">Visible on tablets only</div>
+<div class="asd-desktop">Visible on desktop only</div>
+</textarea>
 </div></div>
