--- a/modules/scrollable.html
+++ b/modules/scrollable.html
@@ -1,3 +1,27 @@
-<div class="as-panel as-vscroll"><div class="as-text-panel">
-<h1 class="as-color-primary">TODO:</h1>
-</div></div>
+<div class="as-panel as-vscroll">
+	<div class="as-text-panel">
+		<h1 class="as-color-primary">Scrollable</h1>
+		<table>
+			<thead>
+				<tr>
+					<th>Class</th>
+					<th>Description</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>.as-vscroll</td>
+					<td>Vertically scrollable area</td>
+				</tr>
+				<tr>
+					<td>.as-hscroll</td>
+					<td>Horizontally scrollable area</td>
+				</tr>
+				<tr>
+					<td>.as-scroll</td>
+					<td>Scrollable area</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+</div>
