basic table module

--- a/modules/gutter.html
+++ b/modules/gutter.html
@@ -5,11 +5,11 @@
 		Gutters provide space between ui elements.
 		</p>
 		
-		<table>
+		<table class="as-table-basic">
 			<thead>
 				<tr>
-					<th>class</th>
-					<th>description</th>
+					<th>Class</th>
+					<th>Description</th>
 				</tr>
 			</thead>
 			<tbody>
