--- a/js/app/sidebar-top-menu.html
+++ b/js/app/sidebar-top-menu.html
@@ -1,3 +1,3 @@
-<div>
-<img src="img/left-menu-logo.png">
+<div style="width: 100%;overflow:hidden;">
+<img src="img/left-menu-logo.png" style="height: 138px">
 </div>
