--- a/root.html
+++ b/root.html
@@ -56,6 +56,11 @@
                         </a> 
                     </li> 
                     <li class="as-sidebar-menu-item">
+                        <a ui-sref="root.modules.panel">
+                            <span class="as-sidebar-menu-item-title">Panel</span> 
+                        </a> 
+                    </li> 
+                    <li class="as-sidebar-menu-item">
                         <a ui-sref="root.modules.scrollable">
                             <span class="as-sidebar-menu-item-title">Scrollable</span> 
                         </a> 
@@ -66,6 +71,12 @@
                     <li class="as-sidebar-menu-item">
                         <a ui-sref="root.modules.table_basic">
                             <span class="as-sidebar-menu-item-title">Table: Basic</span> 
+                        </a> 
+                    </li> 
+                    
+                    <li class="as-sidebar-menu-item">
+                        <a ui-sref="root.modules.table_data">
+                            <span class="as-sidebar-menu-item-title">Table: Data</span> 
                         </a> 
                     </li> 
                 </ul> 
