data table module

--- a/modules/table/table-data.html
+++ b/modules/table/table-data.html
@@ -7,25 +7,29 @@
 		</p>
 		
 		<p>Sample</p>
-		<table class="as-table-basic">
+		<table class="as-data-table">
 			<thead>
-				<tr>
-					<th>ID</th>
-					<th>Same</th>
+				<tr class="as-data-table-tbody-tr">
+					<th class="as-data-table-thead-th asa-left">ID</th>
+					<th class="as-data-table-thead-th asa-right">Count</th>
+					<th class="as-data-table-thead-th asa-left">Summary</th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr>
-					<td>#1</td>
-					<td>Sample data</td>
+				<tr class="as-data-table-tbody-tr">
+					<td class="as-data-table-tbody-td">#1</td>
+					<td class="as-data-table-tbody-td asa-right">12,000</td>
+					<td class="as-data-table-tbody-td">Sample data</td>
 				</tr>
-				<tr>
-					<td>#2</td>
-					<td>Sample data</td>
+				<tr class="as-data-table-tbody-tr">
+					<td class="as-data-table-tbody-td">#2</td>
+					<td class="as-data-table-tbody-td asa-right">1,249</td>
+					<td class="as-data-table-tbody-td">Sample data</td>
 				</tr>
-				<tr>
-					<td>#3</td>
-					<td>Sample data</td>
+				<tr class="as-data-table-tbody-tr">
+					<td class="as-data-table-tbody-td">#3</td>
+					<td class="as-data-table-tbody-td asa-right">980,956</td>
+					<td class="as-data-table-tbody-td">Sample data</td>
 				</tr>
 			</tbody>
 		</table>
