show sources directive

--- a/modules/box.html
+++ b/modules/box.html
@@ -5,41 +5,20 @@
 Primary use is the cases when grid system is too complex to use.</p>
 
 <h2>Horizontal box</h2>
-<p>
-Sample
-</p>
+<sample>
 <div class="as-hbox">
   <div class="as-cell-fixed"><div class="as-bgcolor-green-100 as-gutter">Cell takes width of content</div></div>
   <div class="as-cell-wide"><div class="as-bgcolor-blue-100 as-gutter">Cell takes the rest of width</div></div>
 </div>
-
-<p>
-Source code
-</p>
-<textarea ui-codemirror ui-codemirror-opts="codemirror.html">
-<div class="as-hbox">
-  <div class="as-cell-fixed">Cell take width of content</div>
-  <div class="as-cell-wide">Cell takes the rest of width</div>
-</div>
-</textarea>
+</sample>
 
 <h2>Verical box</h2>
-<p>
-Sample
-</p>
+<sample>
 <div class="as-vbox" style="height:200px;">
   <div class="as-cell-fixed"><div class="as-bgcolor-green-100 as-gutter">Cell takes height of content</div></div>
   <div class="as-cell-wide"><div class="as-bgcolor-blue-100 as-panel as-gutter">Cell takes the rest of height</div></div>
 </div>
-<p>
-Source code
-</p>
-<textarea ui-codemirror ui-codemirror-opts="codemirror.html">
-<div class="as-hbox">
-  <div class="as-cell-fixed">Cell take width of content</div>
-  <div class="as-cell-wide">Cell takes the rest of width</div>
-</div>
-</textarea>
+</sample>
 
 </div>
 </div>
