--- a/modules/responsive.html
+++ b/modules/responsive.html
@@ -5,14 +5,10 @@ Most of real life use cases of responsive design related to hide or show extra d
 </p>
 
 <p>Resize browser to see sample in action</p>
+<sample>
 <div class="asd-phone as-bgcolor-grey-100 as-gutter">Visible on phones only</div>
 <div class="asd-tablet as-bgcolor-grey-100 as-gutter">Visible on tablets only</div>
 <div class="asd-desktop as-bgcolor-grey-100 as-gutter">Visible on desktop only</div>
+</sample>
 
-<p>Source</p>
-<textarea ui-codemirror ui-codemirror-opts="codemirror.html">
-<div class="asd-phone">Visible on phones only</div>
-<div class="asd-tablet">Visible on tablets only</div>
-<div class="asd-desktop">Visible on desktop only</div>
-</textarea>
 </div></div>
