--- a/modules/table/table-data.html
+++ b/modules/table/table-data.html
@@ -6,7 +6,7 @@
 		
 		</p>
 		
-		<p>Sample</p>
+		<sample>
 		<table class="as-data-table">
 			<thead>
 				<tr class="as-data-table-tbody-tr">
@@ -33,5 +33,6 @@
 				</tr>
 			</tbody>
 		</table>
+		</sample>
 	</div>
 </div>
