--- a/root.html
+++ b/root.html
@@ -22,13 +22,13 @@
                             <span class="as-sidebar-menu-item-title">Normalize</span> 
                         </a> 
                     </li> 
-                    <li class="as-sidebar-menu-item"> 
+                    <li class="as-sidebar-menu-item">
                         <a ui-sref="root.core.palette">
                             <span class="as-sidebar-menu-item-title">Palettes</span> 
                         </a> 
                     </li>
                     
-                    <li class="as-sidebar-menu-group-title">modules</li>
+                    <li class="as-sidebar-menu-group-title">Layout modules</li>
                     
                     <li class="as-sidebar-menu-item"> 
                         <a ui-sref="root.modules.box">
