--- a/modules/floating.html
+++ b/modules/floating.html
@@ -7,22 +7,11 @@ Set of classes used to control floating.
 <li>as-float-right</li>
 </ul>
 
-<p>
-Sample
-</p>
+<sample>
 <div class="as-bgcolor-grey-100" style="height: 200px;">
   <div class="as-float-right"><div class="as-bgcolor-green-100 as-gutter">Float right</div></div>
   <div class="as-float-left"><div class="as-bgcolor-green-100 as-gutter">Float left</div></div>
 </div>
-
-<p>
-Source code
-</p>
-<textarea ui-codemirror ui-codemirror-opts="codemirror.html">
-<div class="as-bgcolor-grey-100" style="height: 200px;">
-  <div class="as-float-right"><div class="as-bgcolor-green-100 as-gutter">Float right</div></div>
-  <div class="as-float-left"><div class="as-bgcolor-green-100 as-gutter">Float left</div></div>
-</div>
-</textarea>
+</sample>
 
 </div></div>
