text-align module

--- a/root.html
+++ b/root.html
@@ -74,6 +74,11 @@
                         </a> 
                     </li>
                     <li class="as-sidebar-menu-item">
+                        <a ui-sref="root.modules.text_align">
+                            <span class="as-sidebar-menu-item-title">Text alignment</span> 
+                        </a> 
+                    </li>
+                    <li class="as-sidebar-menu-item">
                         <a ui-sref="root.modules.typography">
                             <span class="as-sidebar-menu-item-title">Typography</span> 
                         </a> 
