--- a/introduction.html
+++ b/introduction.html
@@ -1,4 +1,4 @@
-<div class="as-panel as-vscroll"><div class="as-text-panel">
+<div class="as-panel as-vscroll" ng-init="topMenu.title='Apishore Material Framework'"><div class="as-text-panel">
 <h1 class="as-color-primary">Apishore Material Framework</h1>
 
 <p>This framework is designed to support apishore code generation technology.
