extract responsive service, add force mode

--- a/modules/bottom-navigation.html
+++ b/modules/bottom-navigation.html
@@ -21,7 +21,7 @@
 				</tr>
 			</tbody>
 		</table>
-		<sample>
+		<div class="device-sample">
 		<div class="as-bottom-navigation-container">
 			<div class="as-bottom-navigation-content asd-content-panel" style="height: 400px;">
 			Content
@@ -55,6 +55,6 @@
 				</div>
 			</div>
 		</div>
-		</sample>
+		</</div>
 	</div>
 </div>
