--- a/root.html
+++ b/root.html
@@ -304,6 +304,15 @@
                             <span class="as-sidebar-menu-item-title">Tooltip</span> 
                         </a>
                     </li>
+
+                    <li class="as-sidebar-menu-group-title">Misc</li>
+                    
+                    <li class="as-sidebar-menu-item">
+                        <a ui-sref="root.modules.device_emulation">
+                            <span class="as-sidebar-menu-item-title">Device emulation</span> 
+                        </a>
+                    </li>
+                    
                 </ul> 
             </div> 
         </div> 
